added plot for confusion matrix for select sensor configuration

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -974,6 +974,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d05b862",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_select_cm(os, role):\n",
+    "    IIM = {0 : 'UNKNOWN', 1 : 'WALKING', 2 : 'BICYCLING', 3 : 'BUS', 4 : 'TRAIN', 5 : 'CAR', 6 : 'AIR_OR_HSR', 7 : 'SUBWAY', 8 : 'TRAM', 9 : 'LIGHT_RAIL'\n",
+    "    }\n",
+    "    CIM = {0 : 'IN_VEHICLE', 1 : 'BICYCLING', 2 : 'ON_FOOT', 3 : 'STILL', 4 : 'UNKNOWN', 5 : 'TILTING', 7 : 'WALKING', 8 : 'RUNNING', 9 : 'NONE', 10 : 'STOPPED_WHILE_IN_VEHICLE', 11 : 'AIR_OR_HSR'}\n",
+    "    fig, ax = plt.subplots(1,4, figsize=(22,10), dpi=300, sharey=True)\n",
+    "    y=.95\n",
+    "    fig.text(0.5, 0.0, 'Predicted Label', ha='center', fontsize='xx-large')\n",
+    "    fig.text(0.04, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
+    "    title = f\"Confusion Matrices for Phones Running {os}:{role}\"\n",
+    "    fname = f\"images/selected_cm_{os}\"\n",
+    "    for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [cv_la, cv_sj, cv_ucb], [rfv_la, rfv_sj, rfv_ucb], [gisv_la, gisv_sj, gisv_ucb]]):\n",
+    "        if k == 0:\n",
+    "            sort_dict = {'WALKING' : -1, 'RUNNING' : 0, 'CYCLING' : 1, 'AUTOMOTIVE' : 2, 'INVALID' : 3, 'NO_SENSED' : 4}\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().sort_index(key=lambda x: x.map(sort_dict))\n",
+    "        elif k == 1:\n",
+    "            sort_dict = {\n",
+    "                'WALKING' : 0, 'RUNNING' : 1, 'ON_FOOT' : 2, 'BICYCLING' : 3, \n",
+    "                'IN_VEHICLE' : 4, 'AIR_OR_HSR' : 5, 'UNKNOWN' : 6, 'NO_SENSED' :7\n",
+    "            }\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=CIM).sort_index(key=lambda x: x.map(sort_dict))\n",
+    "        else:\n",
+    "            sort_dict = {\n",
+    "                'WALKING' : 0, 'BICYCLING' : 1, 'CAR' : 2, \n",
+    "                'BUS' : 3, 'SUBWAY' : 4, 'LIGHT_RAIL' : 5, \n",
+    "                'TRAIN' : 6, 'AIR_OR_HSR' : 7, 'NO_SENSED' : 8\n",
+    "            }\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=IIM).sort_index(key=lambda x: x.map(sort_dict))\n",
+    "        df = df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'])\n",
+    "        cm = ax[k].imshow(df.transpose(), interpolation='nearest',  cmap=plt.cm.coolwarm, aspect='auto')\n",
+    "        title_map = {0 : 'raw', 1 : 'clean', 2 : 'random forest', 3 : 'GIS'}\n",
+    "        ax[k].set_title(title_map[k])\n",
+    "        tick_marks = np.arange(len(df))\n",
+    "        ax[k].set_yticks(np.arange(len(df.columns)))\n",
+    "        ax[k].set_xticks(np.arange(len(df)))\n",
+    "        ax[k].set_yticklabels(df)\n",
+    "        ax[k].set_xticklabels(df.index, rotation=80)\n",
+    "        color_thresh = df.max().max() / 4\n",
+    "        for i, j in itertools.product(range(df.shape[1]), range(df.shape[0])  ):\n",
+    "            ax[k].text(j, i, (int(df.transpose().iat[i,j])), horizontalalignment='center', \n",
+    "                   color='white' \n",
+    "                       if df.transpose().iat[i,j] < color_thresh \n",
+    "                       else 'black')\n",
+    "    fig.subplots_adjust(right=0.8)\n",
+    "    cbar_ax = fig.add_axes([0.85, 0.15, 0.05, 0.7])\n",
+    "    fig.colorbar(cm, cax=cbar_ax)\n",
+    "    plt.suptitle(title, weight='bold', size='x-large', y=y)\n",
+    "\n",
+    "    plt.savefig(fname=fname,  bbox_inches=\"tight\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "09b4ab8e",
    "metadata": {},
@@ -1200,6 +1257,17 @@
    "metadata": {},
    "source": [
     "## Selected Setting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "755df998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_select_cm('ios', 'HAHFDC')\n",
+    "plot_select_cm('android', 'HAMFDC')"
    ]
   },
   {
