Split no gt/senseed by start/middle/end, need to clean up unit tests, reformatted plots

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -331,6 +331,12 @@
     "    \"NO_GT\" : \"MISALIGNED\", \n",
     "    \"INVALID\" : \"UNKNOWN\", \n",
     "    \"UNKNOWN\" : \"UNKNOWN\", \n",
+    "    'NO_SENSED_START' : 'NO_SENSED',\n",
+    "    'NO_SENSED_MIDDLE' : 'NO_SENSED',\n",
+    "    'NO_SENSED_END' : 'NO_SENSED',\n",
+    "    'NO_GT_START' : 'NO_GT',\n",
+    "    'NO_GT_MIDDLE' : 'NO_GT',\n",
+    "    'NO_GT_END' : 'NO_GT'\n",
     "}"
    ]
   },
@@ -351,33 +357,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CBMM = {0 : 'AUTOMOTIVE', \n",
-    "        1 : 'CYCLING', \n",
-    "        2 : 'WALKING', \n",
-    "        3 : 'WALKING', \n",
-    "        4 : 'UNKNOWN', \n",
-    "        5 : 'WALKING', \n",
-    "        7 : 'WALKING', \n",
-    "        8 : 'WALKING', \n",
-    "        9 : 'UNKNOWN', \n",
-    "        10 : 'AUTOMOTIVE', \n",
-    "        11 : 'AIR_OR_HSR', \n",
-    "         \"WALKING\": \"WALKING\",\n",
-    "         \"RUNNING\" : \"WALKING\", \n",
-    "         \"CYCLING\" : \"CYCLING\",\n",
-    "         \"BICYCLING\": \"CYCLING\",\n",
-    "         \"ESCOOTER\": \"CYCLING\", \n",
-    "         \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "         \"BUS\": \"AUTOMOTIVE\",\n",
-    "         \"TRAIN\": \"AUTOMOTIVE\",\n",
-    "         \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
-    "         \"SUBWAY\": \"AUTOMOTIVE\",\n",
-    "         \"CAR\": \"AUTOMOTIVE\",\n",
-    "         \"AIR_OR_HSR\": \"AIR_OR_HSR\", \n",
-    "        \"NO_SENSED\" : \"MISALIGNED\", \n",
-    "        \"NO_GT\" : \"MISALIGNED\",\n",
-    "         \"MISALIGNED\" : \"MISALIGNED\", \n",
-    "         \"UNKNOWN\" : \"UNKNOWN\"}"
+    "CBMM = {\n",
+    "    0 : 'AUTOMOTIVE', \n",
+    "    1 : 'CYCLING', \n",
+    "    2 : 'WALKING', \n",
+    "    3 : 'WALKING', \n",
+    "    4 : 'UNKNOWN', \n",
+    "    5 : 'WALKING', \n",
+    "    7 : 'WALKING', \n",
+    "    8 : 'WALKING', \n",
+    "    9 : 'UNKNOWN', \n",
+    "    10 : 'AUTOMOTIVE', \n",
+    "    11 : 'AIR_OR_HSR', \n",
+    "    \"WALKING\": \"WALKING\",\n",
+    "    \"RUNNING\" : \"WALKING\", \n",
+    "    \"CYCLING\" : \"CYCLING\",\n",
+    "    \"BICYCLING\": \"CYCLING\",\n",
+    "    \"ESCOOTER\": \"CYCLING\", \n",
+    "    \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
+    "    \"BUS\": \"AUTOMOTIVE\",\n",
+    "    \"TRAIN\": \"AUTOMOTIVE\",\n",
+    "    \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
+    "    \"SUBWAY\": \"AUTOMOTIVE\",\n",
+    "    \"CAR\": \"AUTOMOTIVE\",\n",
+    "    \"AIR_OR_HSR\": \"AIR_OR_HSR\", \n",
+    "    \"NO_SENSED\" : \"MISALIGNED\", \n",
+    "    \"NO_GT\" : \"MISALIGNED\",\n",
+    "    \"MISALIGNED\" : \"MISALIGNED\", \n",
+    "    \"UNKNOWN\" : \"UNKNOWN\",\n",
+    "    'NO_SENSED_START' : 'NO_SENSED',\n",
+    "    'NO_SENSED_MIDDLE' : 'NO_SENSED',\n",
+    "    'NO_SENSED_END' : 'NO_SENSED',\n",
+    "    'NO_GT_START' : 'NO_GT',\n",
+    "    'NO_GT_MIDDLE' : 'NO_GT',\n",
+    "    'NO_GT_END' : 'NO_GT'\n",
+    "}"
    ]
   },
   {
@@ -421,7 +435,13 @@
     "         \"NO_SENSED\" : \"MISALIGNED\", \n",
     "         \"NO_GT\" : \"MISALIGNED\",\n",
     "         \"MISALIGNED\" : \"MISALIGNED\", \n",
-    "       }"
+    "    'NO_SENSED_START' : 'NO_SENSED',\n",
+    "    'NO_SENSED_MIDDLE' : 'NO_SENSED',\n",
+    "    'NO_SENSED_END' : 'NO_SENSED',\n",
+    "    'NO_GT_START' : 'NO_GT',\n",
+    "    'NO_GT_MIDDLE' : 'NO_GT',\n",
+    "    'NO_GT_END' : 'NO_GT'\n",
+    "}"
    ]
   },
   {
@@ -455,7 +475,13 @@
     "         \"NO_SENSED\" : \"MISALIGNED\", \n",
     "         \"NO_GT\" : \"MISALIGNED\",\n",
     "         \"MISALIGNED\" : \"MISALIGNED\", \n",
-    "       }"
+    "    'NO_SENSED_START' : 'NO_SENSED',\n",
+    "    'NO_SENSED_MIDDLE' : 'NO_SENSED',\n",
+    "    'NO_SENSED_END' : 'NO_SENSED',\n",
+    "    'NO_GT_START' : 'NO_GT',\n",
+    "    'NO_GT_MIDDLE' : 'NO_GT',\n",
+    "    'NO_GT_END' : 'NO_GT'\n",
+    "}"
    ]
   },
   {
@@ -470,13 +496,15 @@
     "    gt_timeline = trip['gts_timeline']\n",
     "    ss_aligned_timeline = []\n",
     "    gt_aligned_timeline = []\n",
+    "    ####### FILL IN SENSED TIMELINE #######\n",
+    "    ### fill in start ###\n",
     "    if len(ss_timeline) == 0:\n",
     "        if len(gt_timeline) == 0:\n",
     "            return ss_timeline, gt_timeline\n",
     "        else:\n",
     "            ss_timeline.append(\n",
     "                {\n",
-    "                    'mode' : 'NO_SENSED',\n",
+    "                    'mode' : 'NO_SENSED_START',\n",
     "                    'start_ts' : gt_timeline[0]['start_ts'],\n",
     "                    'end_ts' : gt_timeline[-1]['end_ts']\n",
     "                }\n",
@@ -484,7 +512,7 @@
     "    if len(gt_timeline) == 0:\n",
     "        gt_timeline.append(\n",
     "            {\n",
-    "                'mode' : 'NO_GT',\n",
+    "                'mode' : 'NO_GT_START',\n",
     "                'start_ts' : ss_timeline[0]['start_ts'],\n",
     "                'end_ts' : ss_timeline[-1]['end_ts']\n",
     "            }\n",
@@ -495,15 +523,14 @@
     "    else:\n",
     "        start_misalignment = ss_timeline[0]['start_ts'] - gt_timeline[0]['start_ts']\n",
     "        end_misalignment = ss_timeline[-1]['end_ts'] - gt_timeline[-1]['end_ts']\n",
-    "    ####### FILL IN SENSED TIMELINE #######\n",
-    "    ### fill in start ###\n",
+    "\n",
     "    if start_misalignment > 0:\n",
     "        if 'data' in ss_timeline[0].keys():\n",
     "            ss_timeline[0] = ss_timeline[0]['data']\n",
     "        \n",
     "        ss_aligned_timeline.append(\n",
     "            {\n",
-    "                'mode' : 'NO_SENSED',\n",
+    "                'mode' : 'NO_SENSED_START',\n",
     "                'start_ts' : ss_timeline[0]['start_ts'] - start_misalignment,\n",
     "                'end_ts' : ss_timeline[0]['start_ts']\n",
     "            }\n",
@@ -520,7 +547,7 @@
     "                ## fill in the blank\n",
     "                ss_aligned_timeline.append(\n",
     "                    {\n",
-    "                        'mode' : 'NO_SENSED', \n",
+    "                        'mode' : 'NO_SENSED_MIDDLE', \n",
     "                        'start_ts' : ss_aligned_timeline[-1]['end_ts'],\n",
     "                        'end_ts' : ss['start_ts']\n",
     "                    }\n",
@@ -535,7 +562,7 @@
     "            ss = ss['data']\n",
     "        ss_aligned_timeline.append(\n",
     "            {\n",
-    "                'mode' : 'NO_SENSED',\n",
+    "                'mode' : 'NO_SENSED_END',\n",
     "                'start_ts' : ss['end_ts'],\n",
     "                'end_ts' : ss['end_ts'] - end_misalignment\n",
     "            }\n",
@@ -545,7 +572,7 @@
     "    if start_misalignment < 0:\n",
     "        gt_aligned_timeline.append(\n",
     "            {\n",
-    "                'mode' : 'NO_GT',\n",
+    "                'mode' : 'NO_GT_START',\n",
     "                'start_ts' : gt_timeline[0]['start_ts'] + start_misalignment,\n",
     "                'end_ts' : gt_timeline[0]['start_ts']\n",
     "            }\n",
@@ -557,7 +584,7 @@
     "            if gts['start_ts'] - gt_aligned_timeline[-1]['end_ts'] > 0:\n",
     "                gt_aligned_timeline.append(\n",
     "                    {\n",
-    "                        'mode' : 'NO_GT',\n",
+    "                        'mode' : 'NO_GT_MIDDLE',\n",
     "                        'start_ts' : gt_aligned_timeline[-1]['end_ts'],\n",
     "                        'end_ts' : gts['start_ts']\n",
     "                    }\n",
@@ -567,7 +594,7 @@
     "    if end_misalignment > 0:\n",
     "        gt_aligned_timeline.append(\n",
     "            {\n",
-    "                'mode' : 'NO_GT',\n",
+    "                'mode' : 'NO_GT_END',\n",
     "                'start_ts' : gt_aligned_timeline[-1]['end_ts'],\n",
     "                'end_ts' : gt_aligned_timeline[-1]['end_ts'] + end_misalignment\n",
     "            }\n",
@@ -734,7 +761,7 @@
    "outputs": [],
    "source": [
     "def plot_f_scores_selected():\n",
-    "    fig, ax = plt.subplots(1,2, figsize = (10,5), dpi=300, sharey=True, sharex=True)\n",
+    "    fig, ax = plt.subplots(1,2, figsize = (10,3), dpi=300, sharey=True, sharex=True)\n",
     "    for i, (os, role) in enumerate([['android', 'HAMFDC'], ['ios', 'HAHFDC']]):\n",
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
     "        clean = get_F_score(os, role, [cv_la, cv_sj, cv_ucb], CBMM)\n",
@@ -746,25 +773,22 @@
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
     "        \n",
-    "        df.T.plot(style='o', ax=ax[i], title=f' {os}:{role} ').legend(loc='lower left')\n",
+    "        df.T.plot(style='o', ax=ax[i], title=f'$F_1$ Scores by Base Mode \\n{os}:{role} ').legend(loc='lower left')\n",
     "        ax[i].set_xticks(range(len(df.T)))\n",
     "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
-    "    title = f\"$F_1$ Scores by Base Mode for Selected OS Setting Configurations\"\n",
-    "    plt.suptitle(title, weight='bold', size='x-large')\n",
+    "#     title = f\"$F_1$ Scores by Base Mode for Selected OS Setting Configurations\"\n",
+    "#     plt.suptitle(title, weight='bold', size='x-large')\n",
     "    fig.savefig(f\"images/f_scores_selected\",  bbox_inches=\"tight\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fb38b7db",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766326ed",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Matthews correlation coefficient\n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\frac{TP \\times TN - FP \\times FN}{\\sqrt{(TP+FP)(TP + FN)(TN+FP)(TN + FN)}}\n",
-    "\\end{equation}"
+    "plot_f_scores_selected()"
    ]
   },
   {
@@ -948,7 +972,9 @@
     "                title = f\"Confusion Matrices for Inferred Output Data (GIS) on Phones Running {os} \\n by Calibration Settings\"\n",
     "        else:\n",
     "            assert 0, f'INVALID d_type {d_type}'\n",
-    "        df = df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'])\n",
+    "        df = df.reindex(\n",
+    "            columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
+    "        ).fillna(0)\n",
     "#         df = df.div(df.sum(axis=1), axis=0)\n",
     "        cm = ax[k].imshow(df.transpose(), interpolation='nearest',  cmap=plt.cm.coolwarm, aspect='auto')\n",
     "        ax[k].set_title(role)\n",
@@ -984,32 +1010,45 @@
     "    IIM = {0 : 'UNKNOWN', 1 : 'WALKING', 2 : 'BICYCLING', 3 : 'BUS', 4 : 'TRAIN', 5 : 'CAR', 6 : 'AIR_OR_HSR', 7 : 'SUBWAY', 8 : 'TRAM', 9 : 'LIGHT_RAIL'\n",
     "    }\n",
     "    CIM = {0 : 'IN_VEHICLE', 1 : 'BICYCLING', 2 : 'ON_FOOT', 3 : 'STILL', 4 : 'UNKNOWN', 5 : 'TILTING', 7 : 'WALKING', 8 : 'RUNNING', 9 : 'NONE', 10 : 'STOPPED_WHILE_IN_VEHICLE', 11 : 'AIR_OR_HSR'}\n",
-    "    fig, ax = plt.subplots(1,4, figsize=(22,10), dpi=300, sharey=True)\n",
+    "    fig, ax = plt.subplots(1,4, figsize=(30,8), dpi=300, sharey=True)\n",
     "    y=.95\n",
-    "    fig.text(0.5, 0.0, 'Predicted Label', ha='center', fontsize='xx-large')\n",
-    "    fig.text(0.04, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
+    "    fig.text(0.5, -0.1, 'Predicted Label', ha='center', fontsize='xx-large')\n",
+    "    fig.text(0.08, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
     "    title = f\"Confusion Matrices for Phones Running {os}:{role}\"\n",
     "    fname = f\"images/selected_cm_{os}\"\n",
     "    for k, pv in enumerate([[pv_la, pv_sj, pv_ucb], [cv_la, cv_sj, cv_ucb], [rfv_la, rfv_sj, rfv_ucb], [gisv_la, gisv_sj, gisv_ucb]]):\n",
     "        if k == 0:\n",
-    "            sort_dict = {'WALKING' : -1, 'RUNNING' : 0, 'CYCLING' : 1, 'AUTOMOTIVE' : 2, 'INVALID' : 3, 'NO_SENSED' : 4}\n",
+    "            sort_dict = {\n",
+    "                'WALKING' : -1, 'RUNNING' : 0, 'CYCLING' : 1, 'AUTOMOTIVE' : 2, 'INVALID' : 3, \n",
+    "                'NO_SENSED_START' : 4,\n",
+    "                'NO_SENSED_MIDDLE' : 5,\n",
+    "                'NO_SENSED_END' : 6\n",
+    "            }\n",
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().sort_index(key=lambda x: x.map(sort_dict))\n",
     "        elif k == 1:\n",
     "            sort_dict = {\n",
     "                'WALKING' : 0, 'RUNNING' : 1, 'ON_FOOT' : 2, 'BICYCLING' : 3, \n",
-    "                'IN_VEHICLE' : 4, 'AIR_OR_HSR' : 5, 'UNKNOWN' : 6, 'NO_SENSED' :7\n",
+    "                'IN_VEHICLE' : 4, 'AIR_OR_HSR' : 5, 'UNKNOWN' : 6, 'NO_SENSED_START' :7,\n",
+    "                'NO_SENSED_MIDDLE' : 8, 'NO_SENSED_END' : 9,\n",
     "            }\n",
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=CIM).sort_index(key=lambda x: x.map(sort_dict))\n",
     "        else:\n",
     "            sort_dict = {\n",
     "                'WALKING' : 0, 'BICYCLING' : 1, 'CAR' : 2, \n",
     "                'BUS' : 3, 'SUBWAY' : 4, 'LIGHT_RAIL' : 5, \n",
-    "                'TRAIN' : 6, 'AIR_OR_HSR' : 7, 'NO_SENSED' : 8\n",
+    "                'TRAIN' : 6, 'AIR_OR_HSR' : 7, 'NO_SENSED_START' : 8,\n",
+    "                'NO_SENSED_MIDDLE' : 9,\n",
+    "                'NO_SENSED_END' : 10\n",
     "            }\n",
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=IIM).sort_index(key=lambda x: x.map(sort_dict))\n",
-    "        df = df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'])\n",
+    "        df = df.reindex(\n",
+    "            columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
+    "        ).fillna(0)\n",
     "        cm = ax[k].imshow(df.transpose(), interpolation='nearest',  cmap=plt.cm.coolwarm, aspect='auto')\n",
-    "        title_map = {0 : 'raw', 1 : 'clean', 2 : 'random forest', 3 : 'GIS'}\n",
+    "        title_map = {0 : f'raw output confusion matrix \\n{os}:{role}', \n",
+    "                     1 : f'clean output confusion matrix \\n{os}:{role}', \n",
+    "                     2 : f'random forest output confusion matrix \\n{os}:{role}', \n",
+    "                     3 : f'GIS output confusion matrix \\n{os}:{role}'}\n",
     "        ax[k].set_title(title_map[k])\n",
     "        tick_marks = np.arange(len(df))\n",
     "        ax[k].set_yticks(np.arange(len(df.columns)))\n",
@@ -1023,9 +1062,9 @@
     "                       if df.transpose().iat[i,j] < color_thresh \n",
     "                       else 'black')\n",
     "    fig.subplots_adjust(right=0.8)\n",
-    "    cbar_ax = fig.add_axes([0.85, 0.15, 0.05, 0.7])\n",
+    "    cbar_ax = fig.add_axes([0.825, 0.15, 0.025, 0.7])\n",
     "    fig.colorbar(cm, cax=cbar_ax)\n",
-    "    plt.suptitle(title, weight='bold', size='x-large', y=y)\n",
+    "#     plt.suptitle(title, weight='bold', size='x-large', y=y)\n",
     "\n",
     "    plt.savefig(fname=fname,  bbox_inches=\"tight\")"
    ]
