cleaned up notebook, final runthrough, good to be merged

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -782,16 +782,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "766326ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_f_scores_selected()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "15c3cee5",
    "metadata": {},
@@ -1347,15 +1337,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a144cc39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pv_l in [[pv_la, pv_sj, pv_ucb],[cv_la, cv_sj, cv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
+    "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "be5801df",
    "metadata": {},
    "outputs": [],
    "source": [
     "for pv_l in [[pv_la, pv_sj, pv_ucb],[cv_la, cv_sj, cv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
     "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n",
-    "    print(\"NO_SENSED trip perdiction for WALKING android:HAMFDC: \\t\",df['WALKING']['NO_SENSED'] / df['WALKING'].sum())\n",
+    "    w_n = (df['WALKING']['NO_SENSED_START'] + df['WALKING']['NO_SENSED_MIDDLE'] + df['WALKING']['NO_SENSED_END'])\n",
+    "    print(\"NO_SENSED trip perdiction for WALKING android:HAMFDC: \\t\", w_n / df['WALKING'].sum())\n",
     "    df = pd.DataFrame(get_confusion_matrix('ios', 'HAHFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n",
-    "    print(\"NO_SENSED trip perdiction for WALKING ios:HAHFDC: \\t\",df['WALKING']['NO_SENSED'] / df['WALKING'].sum())"
+    "    try:\n",
+    "        w_n = (df['WALKING']['NO_SENSED_START'] + df['WALKING']['NO_SENSED_MIDDLE'] + df['WALKING']['NO_SENSED_END'])\n",
+    "    except:\n",
+    "        w_n = (df['WALKING']['NO_SENSED_START'] + df['WALKING']['NO_SENSED_MIDDLE'])\n",
+    "    print(\"NO_SENSED trip perdiction for WALKING ios:HAHFDC: \\t\", w_n / df['WALKING'].sum())"
    ]
   },
   {
@@ -1442,7 +1448,10 @@
     "    'gts_timeline' : [{'start_ts' : 0, 'end_ts' : 1.05, 'mode' : 'WALKING'}, \n",
     "                      {'start_ts' : 1.05, 'end_ts' : 3.1, 'mode' : 'BICYCLING'}]\n",
     "}\n",
-    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'BICYCLING' : 'CYCLING', 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
+    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'BICYCLING' : 'CYCLING', \n",
+    "            'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID', \n",
+    "            'NO_SENSED_START' : 'INVALID', 'NO_SENSED_MIDDLE' : 'INVALID', 'NO_SENSED_END' : 'INVALID', \n",
+    "            'NO_GT_START' : 'INVALID', 'NO_GT_MIDDLE' : 'INVALID', 'NO_GT_END' : 'INVALID'}"
    ]
   },
   {
@@ -1512,10 +1521,10 @@
    "source": [
     "res = get_confusion_matrix(..., ..., ..., test=True, test_trip=test_trip)\n",
     "df = pd.DataFrame(res).groupby('sensed_mode').sum()\n",
-    "assert 'WALKING' in df.index and 'CYCLING' in df.index and 'NO_SENSED' in df.index, f\"INCORRECT INDECIES \\n EXPECTED \\t 'WALKING', 'CYCLING', 'NO_SENSED' \\n GOT \\t \\t {df.index}\"\n",
-    "assert df.loc['WALKING'].loc['WALKING'] == 0.55 and df.loc['WALKING'].loc['BICYCLING'] == 0.70 and round(df.loc['WALKING'].loc['NO_GT'],2) == 0.40\n",
-    "assert df.loc['CYCLING'].loc['WALKING'] == 0 and df.loc['CYCLING'].loc['BICYCLING'] == 1.35 and round(df.loc['CYCLING'].loc['NO_GT'],2) == 0.0\n",
-    "assert round(df.loc['NO_SENSED'].loc['WALKING'], 2) == 0.50 and df.loc['NO_SENSED'].loc['BICYCLING'] == 0.0 and round(df.loc['NO_SENSED'].loc['NO_GT'],2) == 0.0"
+    "assert 'WALKING' in df.index and 'CYCLING' in df.index and 'NO_SENSED_START' in df.index, f\"INCORRECT INDECIES \\n EXPECTED \\t 'WALKING', 'CYCLING', 'NO_SENSED' \\n GOT \\t \\t {df.index}\"\n",
+    "assert df.loc['WALKING'].loc['WALKING'] == 0.55 and df.loc['WALKING'].loc['BICYCLING'] == 0.70 and round(df.loc['WALKING'].loc['NO_GT_END'],2) == 0.40\n",
+    "assert df.loc['CYCLING'].loc['WALKING'] == 0 and df.loc['CYCLING'].loc['BICYCLING'] == 1.35 and round(df.loc['CYCLING'].loc['NO_GT_END'],2) == 0.0\n",
+    "assert round(df.loc['NO_SENSED_START'].loc['WALKING'], 2) == 0.50 and df.loc['NO_SENSED_START'].loc['BICYCLING'] == 0.0 and round(df.loc['NO_SENSED_START'].loc['NO_GT_END'],2) == 0.0"
    ]
   },
   {
@@ -1565,7 +1574,9 @@
     "    'ss_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1.5, 'mode' : 'WALKING'}],\n",
     "    'gts_timeline' : [{'start_ts' : 0, 'end_ts' : 1, 'mode' : 'WALKING'}, {'start_ts' : 1, 'end_ts' : 2, 'mode' : 'CYCLING'}]\n",
     "}\n",
-    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : \"CYCLING\", 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
+    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : \"CYCLING\", 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID',\n",
+    "            'NO_SENSED_START' : 'INVALID', 'NO_SENSED_MIDDLE' : 'INVALID', 'NO_SENSED_END' : 'INVALID', \n",
+    "            'NO_GT_START' : 'INVALID', 'NO_GT_MIDDLE' : 'INVALID', 'NO_GT_END' : 'INVALID'}"
    ]
   },
   {
@@ -1611,8 +1622,8 @@
    "source": [
     "assert df.loc['WALKING'].loc['WALKING'] == 0.5\n",
     "assert df.loc['WALKING'].loc['CYCLING'] == 0.5\n",
-    "assert df.loc['NO_SENSED'].loc['WALKING'] == 0.5\n",
-    "assert df.loc['NO_SENSED'].loc['CYCLING'] == 0.5"
+    "assert df.loc['NO_SENSED_START'].loc['WALKING'] == 0.5\n",
+    "assert df.loc['NO_SENSED_END'].loc['CYCLING'] == 0.5"
    ]
   },
   {
@@ -1659,7 +1670,9 @@
     "    'gts_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1.5, 'mode' : 'WALKING'}],\n",
     "    'ss_timeline' : [{'start_ts' : 0, 'end_ts' : 2, 'mode' : 'WALKING'}]\n",
     "}\n",
-    "test_BMM = {'WALKING' : 'WALKING', 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
+    "test_BMM = {'WALKING' : 'WALKING', 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID',\n",
+    "            'NO_SENSED_START' : 'INVALID', 'NO_SENSED_MIDDLE' : 'INVALID', 'NO_SENSED_END' : 'INVALID', \n",
+    "            'NO_GT_START' : 'INVALID', 'NO_GT_MIDDLE' : 'INVALID', 'NO_GT_END' : 'INVALID'}"
    ]
   },
   {
@@ -1704,7 +1717,8 @@
    "outputs": [],
    "source": [
     "assert df.loc['WALKING'].loc['WALKING'] == 1\n",
-    "assert df.loc['WALKING'].loc['NO_GT'] == 1"
+    "assert df.loc['WALKING'].loc['NO_GT_START'] == 0.5\n",
+    "assert df.loc['WALKING'].loc['NO_GT_END'] == 0.5"
    ]
   },
   {
@@ -1749,7 +1763,9 @@
     "        ]\n",
     "    }\n",
     "]\n",
-    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'NO_SENSED' : 'NO_SENSED', 'NO_GT' : 'NO_GT'}"
+    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'NO_SENSED' : 'NO_SENSED', 'NO_GT' : 'NO_GT',\n",
+    "            'NO_SENSED_START' : 'NO_SENSED', 'NO_SENSED_MIDDLE' : 'NO_SENSED', 'NO_SENSED_END' : 'NO_SENSED', \n",
+    "            'NO_GT_START' : 'NO_GT', 'NO_GT_MIDDLE' : 'NO_GT', 'NO_GT_END' : 'NO_GT'}"
    ]
   },
   {
