setting up notebooks and modules to be merged to main

--- a/timeline_train_bus_ebike_mtv_ucb.ipynb
+++ b/timeline_train_bus_ebike_mtv_ucb.ipynb
@@ -309,25 +309,11 @@
     "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
