documenting notebook, ready to be merged

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -149,6 +149,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09e2735d",
+   "metadata": {},
+   "source": [
+    "## Load in Phone Views from Server of Pickle File"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c45d91ee",
@@ -221,7 +229,7 @@
    "id": "be3b7b48",
    "metadata": {},
    "source": [
-    "### Get the sensed data for each trip"
+    "### Get sensed data for each trip"
    ]
   },
   {
@@ -242,7 +250,7 @@
    "id": "5425a4a7",
    "metadata": {},
    "source": [
-    "## Get sensed timeline"
+    "## Get sensed and ground truth temporal histories (timelines)"
    ]
   },
   {
@@ -269,8 +277,10 @@
     "                tr_gts = []\n",
     "                for i, tr in enumerate(r[\"evaluation_trip_ranges\"]):\n",
     "                    for ss in tr[\"sensed_section_ranges\"]:\n",
+    "                        ## append the sensed section data\n",
     "                        tr_ss.append(ss)\n",
     "                    for section in tr[\"evaluation_section_ranges\"]:\n",
+    "                        ## get the ground truth section data\n",
     "                        section_gt_leg = pv.spec_details.get_ground_truth_for_leg(tr['trip_id_base'],\n",
     "                                                                                  section['trip_id_base'],\n",
     "                                                                                  tr['start_ts'],\n",
@@ -292,10 +302,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20bb504d",
+   "id": "425db461",
    "metadata": {},
    "source": [
-    "## Binary Classification (in seconds)"
+    "## Define the Base Mode Maps"
    ]
   },
   {
@@ -303,7 +313,7 @@
    "id": "ddf4365a",
    "metadata": {},
    "source": [
-    "#### rab base mode map"
+    "#### raw base mode map"
    ]
   },
   {
@@ -399,9 +409,17 @@
    "id": "a4f3dfff",
    "metadata": {},
    "source": [
-    "#### inferred base mode map\n",
+    "### inferred base mode maps\n",
     "\n",
     "e-mission-server.emission.core.wrapper.modeprediction.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ad88760",
+   "metadata": {},
+   "source": [
+    "#### random forest base mode map"
    ]
   },
   {
@@ -445,6 +463,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f7d489e",
+   "metadata": {},
+   "source": [
+    "#### rule+GIS base mode map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "507c0aa7",
@@ -482,6 +508,14 @@
     "    'NO_GT_MIDDLE' : 'NO_GT',\n",
     "    'NO_GT_END' : 'NO_GT'\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99991019",
+   "metadata": {},
+   "source": [
+    "#### Pad the start at end of the timelines for a given trip, while also filling in gaps in the middle"
    ]
   },
   {
@@ -603,6 +637,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ff29c63",
+   "metadata": {},
+   "source": [
+    "#### Get the classification metrics (true/false positive, true/false negative) for each Base Mode for a given trip/set-of-trips"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1a9b89d4",
@@ -680,6 +722,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28dfbf84",
+   "metadata": {},
+   "source": [
+    "#### Get the support for each base mode in a set of trips, which is the sum of confusion matrix row sums for each mode that maps to a base mode, $M_{bm} = \\{ m : b(m) = bm, m \\in M \\}$ "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5cdb925f",
@@ -708,6 +758,18 @@
     "                ss_dur += (ss['data']['end_ts'] - ss['data']['start_ts'])\n",
     "        support['NO_GT'] = support.setdefault('NO_GT', 0) + max(0, ss_dur - gt_dur)\n",
     "    return support"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1353dfa1",
+   "metadata": {},
+   "source": [
+    "### Weighted $F_1$ Score\n",
+    "\n",
+    "\\begin{equation}\\label{eq:w_f_score}\n",
+    "    F_1^{avg} = \\sum_{i=1}^{|BM|} \\left[  \\sum_{j=1} ^ {|M_{bm_i}|} \\sum_{k = 1}^{|M^{inf}|} cm_{j, k} \\right] \\cdot F_1^{bm}\n",
+    "\\end{equation}"
    ]
   },
   {
@@ -754,6 +816,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72b356de",
+   "metadata": {},
+   "source": [
+    "#### Plot $F$ scores for android/ios on select configuration settings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d69e395b",
@@ -779,47 +849,6 @@
     "#     title = f\"$F_1$ Scores by Base Mode for Selected OS Setting Configurations\"\n",
     "#     plt.suptitle(title, weight='bold', size='x-large')\n",
     "    fig.savefig(f\"images/f_scores_selected\",  bbox_inches=\"tight\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15c3cee5",
-   "metadata": {},
-   "source": [
-    "# Get support \n",
-    "\n",
-    "Support is the ground truth durration for each class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a58ecb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_support(os, role, pv, BASE_MODE):\n",
-    "    if type(pv) is not list: pv = [pv]\n",
-    "    trips = []\n",
-    "    for v in pv:\n",
-    "        trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
-    "    support = {}\n",
-    "    for trip in trips:\n",
-    "        ## get gts dur\n",
-    "        gt_dur = 0\n",
-    "        for gts in trip['gts_timeline']:\n",
-    "            mode = BASE_MODE[gts['mode']]\n",
-    "            support[mode] = support.setdefault(mode, 0) + gts['end_ts'] - gts['start_ts']\n",
-    "            gt_dur += (gts['end_ts'] - gts['start_ts'])\n",
-    "        ## check if there is a NO_GT mode\n",
-    "        ss_dur = 0\n",
-    "        for ss in trip['ss_timeline']:\n",
-    "            try:\n",
-    "                ss_dur += (ss['end_ts'] - ss['start_ts'])\n",
-    "            except:\n",
-    "                ss_dur += (ss['data']['end_ts'] - ss['data']['start_ts'])\n",
-    "        support['NO_GT'] = support.setdefault('NO_GT', 0) + max(0, ss_dur - gt_dur)\n",
-    "    return support"
    ]
   },
   {
@@ -987,6 +1016,14 @@
     "    plt.suptitle(title, weight='bold', size='x-large', y=y)\n",
     "\n",
     "    plt.savefig(fname=fname,  bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "290e9603",
+   "metadata": {},
+   "source": [
+    "#### plot the confusion matrices at each pipeline output stage on android/ios for select configuration settings"
    ]
   },
   {
@@ -1327,14 +1364,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8d8e3b06",
-   "metadata": {},
-   "source": [
-    "### Discussion "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a144cc39",
@@ -1343,6 +1372,14 @@
    "source": [
     "for pv_l in [[pv_la, pv_sj, pv_ucb],[cv_la, cv_sj, cv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
     "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0a6d52",
+   "metadata": {},
+   "source": [
+    "#### get percentage of no sensed predicted mode for a given ground truth mode (in this case ground truth mode = walking)"
    ]
   },
   {
