Fix this so that it actually runs

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -352,7 +352,7 @@
    "outputs": [],
    "source": [
     "to_ucb_trip = third_repetition[\"evaluation_trip_ranges\"][0]; print(to_ucb_trip[\"trip_id\"])\n",
-    "bart_leg = to_ucb_trip[\"evaluation_section_ranges\"][5]; bart_leg"
+    "bart_leg = to_ucb_trip[\"evaluation_section_ranges\"][5]; bart_leg[\"trip_id\"]"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_leg = sd.get_ground_truth_for_leg(to_ucb_trip[\"trip_id_base\"], bart_leg[\"trip_id_base\"]); gt_leg[\"id\"]"
+    "gt_leg = sd.get_ground_truth_for_leg(to_ucb_trip[\"trip_id_base\"], bart_leg[\"trip_id_base\"], bart_leg[\"start_ts\"], bart_leg[\"end_ts\"]); gt_leg[\"id\"]"
    ]
   },
   {
@@ -421,6 +421,13 @@
     "folium.LayerControl().add_to(curr_map)\n",
     "curr_map"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
