Support start and end timestamps for the `get_ground_truth_for_leg`
In the data exploration template as well
Follow-on to e7c1749435db2316c6e1ad12c56611f53b6b9c70

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -36,6 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Visualization helpers\n",
     "import emeval.viz.phone_view as ezpv\n",
     "import emeval.viz.eval_view as ezev\n",
@@ -294,7 +304,8 @@
     "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
     "                for sr in tr[\"evaluation_section_ranges\"]:\n",
     "                    print(16 * ' ', 30 * \"-\")\n",
-    "                    gt_leg = sd.get_ground_truth_for_leg(tr[\"trip_id_base\"], sr[\"trip_id_base\"])\n",
+    "                    gt_leg = sd.get_ground_truth_for_leg(tr[\"trip_id_base\"], sr[\"trip_id_base\"],\n",
+    "                                                        arrow.get(\"2019-01-01\").timestamp, arrow.get(\"2019-09-30\").timestamp)\n",
     "                    print(16 * ' ', sr[\"trip_id\"], gt_leg[\"mode\"], sr.keys())"
    ]
   },
@@ -361,7 +372,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_leg = sd.get_ground_truth_for_leg(to_ucb_trip[\"trip_id_base\"], bart_leg[\"trip_id_base\"]); gt_leg[\"id\"]"
+    "gt_leg = sd.get_ground_truth_for_leg(to_ucb_trip[\"trip_id_base\"], bart_leg[\"trip_id_base\"],\n",
+    "                                     arrow.get(\"2019-01-01\").timestamp, arrow.get(\"2019-09-30\").timestamp); gt_leg[\"id\"]"
    ]
   },
   {
