--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -111,14 +111,14 @@
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
     "\n",
     "# If using ServerSpecDetails, data can alternatively be retrieved as such:\n",
-    "DATASTORE_LOC = \"http://localhost:8080\"\n",
-    "sd = eisd.ServerSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")\n",
+    "# DATASTORE_LOC = \"http://localhost:8080\"\n",
+    "# sd = eisd.ServerSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")\n",
     "\n",
     "# You must run `cd bin/ && python dump_data_to_file.py --spec-id train_bus_ebike_mtv_ucb`\n",
     "# before using this notebook!\n",
     "\n",
-    "# DATASTORE_LOC = \"bin/data/\"\n",
-    "# sd = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
+    "DATASTORE_LOC = \"bin/data/\"\n",
+    "sd = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
    ]
   },
   {
@@ -442,7 +442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
