--- a/example_visualization_SFBA_second_failed_experiment.ipynb
+++ b/example_visualization_SFBA_second_failed_experiment.ipynb
@@ -497,11 +497,25 @@
     "ezpv.display_unprocessed_ios_activity_transitions(pvmco1, ax[1][1], \"calibration\", \"high\")\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
