--- a/Calibration_stationary_basic_stats.ipynb
+++ b/Calibration_stationary_basic_stats.ipynb
@@ -143,7 +143,8 @@
    "outputs": [],
    "source": [
     "# pv_hf.validate()\n",
-    "pv_mf.validate()"
+    "validation is generally broken",
+    "# pv_mf.validate()"
    ]
   },
   {
